apps/keycloak/keycloak-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
  - name: api-gateway
    kind: Gateway
    namespace: gateway-api
  hostnames:
  - keycloak.matheus.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak
      kind: Service
      port: 80
